[gd_scene load_steps=5 format=3 uid="uid://bq8bj5if261f6"]

[ext_resource type="Texture2D" uid="uid://7vbjvh67kyte" path="res://assets/menu/Background.png" id="1_6wrug"]
[ext_resource type="Script" uid="uid://cwil4eb8babri" path="res://scripts/map_menu/map_menu.gd" id="1_n6ehd"]
[ext_resource type="FontFile" uid="uid://dkctivjq28eq8" path="res://assets/fonts/Jersey10-Regular.ttf" id="14_l25p1"]
[ext_resource type="AudioStream" uid="uid://dhbo2bbe7qlvb" path="res://assets/audio/effects/ui/ui-click-43196.mp3" id="15_8wfm2"]

[node name="MapMenu" type="Control" groups=["music_settigns", "music_settings"]]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_n6ehd")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0
texture = ExtResource("1_6wrug")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 233.0
offset_top = -290.0
offset_right = 546.0
offset_bottom = 61.0
grow_horizontal = 2
grow_vertical = 2

[node name="TutorialBtn" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 26
action_mode = 0
keep_pressed_outside = true
text = "Tutorial"

[node name="Level1Btn" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 26
keep_pressed_outside = true
text = "Level 1"

[node name="Level2Btn" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 26
keep_pressed_outside = true
text = "Level 2"

[node name="Level3Btn" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 26
keep_pressed_outside = true
text = "Level 3"

[node name="Level4Btn" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 26
keep_pressed_outside = true
text = "Level 4"

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -553.0
offset_top = -302.0
offset_right = -143.0
offset_bottom = -176.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("14_l25p1")
theme_override_font_sizes/font_size = 90
text = "Test of Might"
horizontal_alignment = 1
vertical_alignment = 1

[node name="sfxHover" type="AudioStreamPlayer" parent="."]
stream = ExtResource("15_8wfm2")
bus = &"SFX"

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 389.0
offset_top = 517.0
offset_right = 799.0
offset_bottom = 606.0

[node name="ErrorLabel" type="Label" parent="VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 25

[node name="StartGameBtn" type="Button" parent="VBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Start Game"

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 8.0
offset_top = 603.0
offset_right = 166.0
offset_bottom = 634.0
text = "Back to main menu"

[connection signal="mouse_entered" from="VBoxContainer/TutorialBtn" to="." method="_play_Sound"]
[connection signal="pressed" from="VBoxContainer/TutorialBtn" to="." method="_on_tutorial_btn_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/Level1Btn" to="." method="_play_Sound"]
[connection signal="pressed" from="VBoxContainer/Level1Btn" to="." method="_on_level_1_btn_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/Level2Btn" to="." method="_play_Sound"]
[connection signal="pressed" from="VBoxContainer/Level2Btn" to="." method="_on_level_2_btn_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/Level3Btn" to="." method="_play_Sound"]
[connection signal="pressed" from="VBoxContainer/Level3Btn" to="." method="_on_level_3_btn_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/Level4Btn" to="." method="_play_Sound"]
[connection signal="pressed" from="VBoxContainer/Level4Btn" to="." method="_on_level_4_btn_pressed"]
[connection signal="mouse_entered" from="VBoxContainer2/StartGameBtn" to="." method="_play_Sound"]
[connection signal="pressed" from="VBoxContainer2/StartGameBtn" to="." method="_on_start_game_btn_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_back_to_menu_pressed"]
